syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc StreamHello(HelloRequest) returns (stream HelloReply);
  rpc BiDirectionalStream(stream HelloRequest) returns (stream HelloReply);

  rpc TestNested(NestedRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message NestedRequest {
  HelloReply reply = 1;
  optional HelloRequest request2 = 2;
  oneof testoneof {
    HelloReply reply3 = 3;
    HelloRequest request4 = 4;
  }
  repeated HelloReply replies = 5;
}